feat(automod): Add Unit test for automod feature